<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_friends"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="154dp">

        <LinearLayout
            android:id="@+id/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/friends_search_bar"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:hint="@string/friend_search_hint">

            </androidx.appcompat.widget.SearchView>

            <Button
                android:id="@+id/BT_ScanQR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SCAN QR" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friends_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_friend" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>