...
        android:id="@+id/community_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_community"
        android:title="@string/community_menu_item" />
    <!-- Friends -->
    <item
        android:id="@+id/friends_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends_menu_item" />
    <!-- Draw -->
    <item
        android:id="@+id/draw_menu_item"
...
