<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/friend_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_profile_placeholder"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintEnd_toStartOf="@id/add_friend_button"
        tools:text="John Doe" />

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>