<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/path_drawing_end_fragment">

    <FrameLayout
        android:id="@+id/path_drawing_end_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <FrameLayout
        android:id="@+id/path_drawing_end_performance"
        android:layout_width="match_parent"
        android:layout_height="250dp">
    </FrameLayout>
    <FrameLayout
        android:id="@+id/path_drawing_end_form_description"
        android:layout_width="match_parent"
        android:layout_height="110dp">
    </FrameLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/path_drawing_end_back_menu_button"
        android:textStyle="bold"
        android:text="@string/back_to_menu"/>
</LinearLayout>