<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/path_drawing_pause_button_fragment">

    <Button
        android:id="@+id/path_drawing_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:textStyle="bold"/>

</LinearLayout>